Fixed the problem with the bottom controls not shifted right.

--- a/styles.css
+++ b/styles.css
@@ -111,6 +111,7 @@ li:nth-child(2n) {
 /*===== Footer =====*/
 
 footer {
+  display: flex;
   flex: 0 0 90px;  /* Don't grow or shrink - just stay at a height of 90px. */
   padding: 10px;
   color: #fff;
